--- a/AI Doctor/style.css
+++ b/AI Doctor/style.css
@@ -52,21 +52,25 @@ body {
    
 }
 
-
-
-
-
-.textbox {
-    width: 300px;
-    height: 100px;
-    border: 2px solid #fff;
-    background-color: #000;
-    color: #fff;
-    font-family: 'Courier New', monospace;
-    font-size: 16px;
-    padding: 10px;
-    margin-bottom: 20px;
+.mainbox {
+    width: 987px;
+  height: 490px;
+  margin-left: 0;
+  background-color: #000;
+  color: #fff;
+  font-family: 'Courier New', monospace;
+  font-size: 16px;
+  padding: 0;
+  margin-right: 16px;
+  border: 2px solid #fff;
+  box-sizing: border-box;
+  border: 1px solid #33ff33;
 }
+
+
+
+
+
 
 .slider {
     width: 300px;
