--- a/AI Doctor/style.css
+++ b/AI Doctor/style.css
@@ -2,19 +2,20 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: '', monospace;
+    font-family: 'courier', monospace;
 }
 
 body {
     background-color: #01220f;
     color: #fff;
-   
+
     text-align: center;
 }
 
 
 .title {
-    border: 1px solid #33ff33; /* Green border */
+    border: 1px solid #33ff33;
+    /* Green border */
     margin: 3.5px;
     padding: 2px;
     box-sizing: border-box;
@@ -27,7 +28,11 @@ body {
     align-items: center;
     justify-content: start;
     height: auto;
-    border: 1px solid #33ff33; /* Green border */
+    border: 4px solid #33ff33;
+    
+    border-style: inset;
+    margin: 10px;
+    padding: 3px;
 }
 
 
@@ -36,35 +41,61 @@ body {
 .sidebox {
     width: 241px;
     height: auto;
-    margin-left: 0;
-    background-color: #000;
-    color: #fff;
+    margin-left: 5px;
+    color: white;
     font-family: 'Courier New', monospace;
     font-size: 16px;
     padding: 0;
     margin-right: 20px;
-    border: 2px solid #fff;
+
     box-sizing: border-box;
-    border: 1px solid #33ff33; /* Green border */
+
 }
 
-.profile-pic {
-   
+.green-text {
+    color: #33ff33;
+}
+
+.profile {
+    border: 4px solid #33ff33;
+    
+    border-style: inset;
+    margin: 10px;
+    padding: 3px;
+}
+
+.profile-pic {}
+
+.med-history {
+    border: 4px solid #33ff33;
+    
+    border-style: inset;
+    margin: 10px;
+    padding: 3px;
 }
 
 .mainbox {
     width: 987px;
-  height: 490px;
-  margin-left: 0;
-  background-color: #000;
-  color: #fff;
-  font-family: 'Courier New', monospace;
-  font-size: 16px;
-  padding: 0;
-  margin-right: 16px;
-  border: 2px solid #fff;
-  box-sizing: border-box;
-  border: 1px solid #33ff33;
+    height: 490px;
+    
+    font-family: 'Courier New', monospace;
+    font-size: 16px;
+    border: 4px solid #33ff33;
+    
+    border-style: inset;
+    margin: 10px;
+    padding: 3px;
+}
+
+ 
+.textbox textarea {
+    background-color: transparent;
+    border: 4px solid #33ff33;
+  
+    border-style: inset;
+    margin: 10px;
+    padding: 3px;
+
 }
 
 
@@ -95,4 +126,3 @@ body {
     background-color: #fff;
     cursor: pointer;
 }
-
