--- a/AI Doctor/style.css
+++ b/AI Doctor/style.css
@@ -91,7 +91,7 @@ body {
 .textbox textarea {
     background-color: transparent;
     border: 4px solid #33ff33;
-  
+    color: white;
     border-style: inset;
     margin: 10px;
     padding: 3px;
