--- a/AI Doctor/app/templates/index.html
+++ b/AI Doctor/app/templates/index.html
@@ -65,7 +65,7 @@
             </div>
             <div class="textbox">
                 <h2>Symptoms/problems/questions</h2>
-                <textarea id="Symptoms" rows="4" cols="50" style="color:white" ></textarea>
+                <input id="Symptoms" name="Symptoms" rows="4" cols="50" style="color:black" >
                 <button id="sendButton">Send</button>
             </div>
             <!-- <div class="slider">
