--- a/AI Doctor/app/templates/signup.html
+++ b/AI Doctor/app/templates/signup.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Sign Up</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/static/signup.css">
+    <link rel="stylesheet" href="/static/login.css">
 </head>
 <body>
     <script type="text/javascript">
@@ -14,68 +14,52 @@
     </script>
 	<main>
         <section class="hero">
-            <div class="signup-box">
-                {% with messages = get_flashed_messages(with_categories=true) %} 
-                {% if messages %} 
-                {% for category, message in messages %} 
-                    {% if category =='signup-error' %}
-                        <div class="alert error">
-                            <input type="checkbox" id="alert1"/>
-                            <label class="close" title="close" for="alert1">
-                                <i class="fa fa-remove"></i>
-                            </label>
-                            <p class="inner">
-                                <strong>{{message}}</strong> 
-                            </p>
-                        </div>
-                    {% elif category =='signup-success'%}
-                        <div class="alert success">
-                            <input type="checkbox" id="alert1"/>
-                            <label class="close" title="close" for="alert1">
-                                <i class="fa fa-remove"></i>
-                            </label>
-                            <p class="inner">
-                                <strong>{{message}}</strong> 
-                            </p>
-                        </div>
-                    {% endif %} 
-                {% endfor %} 
+            {% with messages = get_flashed_messages(with_categories=true) %} 
+            {% if messages %} 
+            {% for category, message in messages %} 
+                {% if category =='signup-error' %}
+                    <div class="alert error">
+                        <input type="checkbox" id="alert1"/>
+                        <label class="close" title="close" for="alert1">
+                            <i class="fa fa-remove"></i>
+                        </label>
+                        <p class="inner">
+                            <strong>{{message}}</strong> 
+                        </p>
+                    </div>
+                {% elif category =='signup-success'%}
+                    <div class="alert success">
+                        <input type="checkbox" id="alert1"/>
+                        <label class="close" title="close" for="alert1">
+                            <i class="fa fa-remove"></i>
+                        </label>
+                        <p class="inner">
+                            <strong>{{message}}</strong> 
+                        </p>
+                    </div>
                 {% endif %} 
-                {% endwith %}
-                <h2>Sign Up </h2>
+            {% endfor %} 
+            {% endif %} 
+            {% endwith %}
+            <div class="login-box" style="height: 600px; ">
+                <p style="font-size: 36px;text-align: center; margin: 20px;">Sign Up </p>
                   <form method="POST">  
-                    <div class="input-container">
-                        <label for="firstName">First Name:</label>
-                        <input type="text" id="firstName" name="firstName" required>
-                    </div>
-                    <div class="input-container">
-                        <label for="lastName">Last Name:</label>
-                        <input type="text" id="lastName" name="lastName" required>
-                    </div>
-                    <div class="input-container">
-                        <label for="dob" class="form-label">Date of birth:</label>
-                        <input type="text" class="form-control" id="dob" name="dob" placeholder="mm/dd/yyyy" required>
-                    </div>
-                    <div class="input-container">
-                        <label for="gender" class="form-label">Gender:</label>
-                        <input type="text" class="form-control" id="gender" name="gender" required>
-                    </div>
-                    <div class="input-container">
-                        <label for="email">Email:</label>
-                        <input type="email" class="form-control" id="inputEmail4" name="email" required>
-                    </div>
-                    <div class="input-container">
-                        <label for="inputPassword4" class="form-label">Password:</label>
-                        <input type="password" class="form-control" id="inputPassword4" name="password1" required>
-                    </div>
-                    <div class="input-container">
-                        <label for="inputPassword4" class="form-label">Confirm Password:</label>
-                        <input type="password" class="form-control" id="inputPassword4" name="password2" required>
-                    </div>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+                
+                    <label for="email">Email:</label>
+                    <input type="email" id="inputEmail4" name="email" required>
+                
+                    <label for="inputPassword4" class="form-label">Password:</label>
+                    <input type="password" id="inputPassword4" name="password1" required>
+
+                    <label for="inputPassword4" class="form-label">Confirm Password:</label>
+                    <input type="password" id="inputPassword4" name="password2" required>
+
                     <button class="btn-primary">Sign Up</button>
                 </form>
                 <div class="links">
-                    <p>Already have an account? <a href="/login/">Log in here.</a></p>
+                    <p style="text-align: center;">Already have an account? <a href="/login/">Log in here.</a></p>
                 </div>
             </div>
         </section>
