--- a/AI Doctor/app/static/style.css
+++ b/AI Doctor/app/static/style.css
@@ -2,24 +2,77 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'courier', monospace;
+    font-family: 'Inconsolata', monospace;
+    justify-content: center;
+    align-items: center;
 }
 
 body {
-    background-color: #01220f;
-    color: #fff;
+   
+    background: conic-gradient(
+    from 45deg,
+    #00200d 0,
+    #052b14 90deg,
+    #00200d 90deg,
+    #02481f 180deg,
+    #0b4a25 180deg,
+    #002811 270deg,
+    #00200d 270deg,
+    #00200d 360deg
+  );
+  background-size: 0.1em 0.1em;
+  height: 100vh;
+}
 
-    text-align: center;
+.uppercase-text {
+    text-transform: uppercase;
+}
+
+.navbar {
+    height: 60px;
+    color: #04a504;
+    font-weight: 1000;
+    box-sizing: border-box;
+    font-size: 30px;
+    border: 4px solid #33ff33;
+    border-style: inset;
+    margin: 10px;
+    padding: 3px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+
+}
+.title {
+   
+    margin-left: 10px;
+ 
+}
+
+.logout {
+    color: #049f04;
+    text-decoration: none;
+    margin-right: 10px;
 }
 
 
-.title {
-    border: 1px solid #33ff33;
-    /* Green border */
-    margin: 3.5px;
-    padding: 2px;
-    box-sizing: border-box;
-    font-size: 25px;
+#logout {
+    color: black;
+    padding: 7px 15px;
+    border: 2px solid;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    background-color: #33ff33;
+}
+
+
+#logout:hover {
+    background-color: #000000;
+    color: #33ff33;
+    border: 2px solid #33ff33;
 }
 
 .container {
@@ -29,7 +82,7 @@ body {
     justify-content: start;
     height: auto;
     border: 4px solid #33ff33;
-    
+
     border-style: inset;
     margin: 10px;
     padding: 3px;
@@ -39,69 +92,161 @@ body {
 
 
 .sidebox {
-    width: 241px;
+    width: 23%;
     height: auto;
     margin-left: 5px;
     color: white;
-    font-family: 'Courier New', monospace;
     font-size: 16px;
     padding: 0;
     margin-right: 20px;
-
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: center;
+}
 
+
+.profile {
+    height: 50%;
+    border: 4px solid #33ff33;
+    border-style: inset;
+    margin: 10px;
+    padding: 3px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.med-history {
+    height: 200px;
+    border: 4px solid #33ff33;
+    border-style: inset;
+    margin: 10px;
+    padding: 3px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .green-text {
     color: #33ff33;
 }
 
-.profile {
-    border: 4px solid #33ff33;
-    
-    border-style: inset;
-    margin: 10px;
-    padding: 3px;
+#presentMedHistory {
+    background-color: transparent;
+    height: 30%;
+    width: 98%;
+
+    border-style: none;
+    outline: none;
+    /* Remove default focus outline */
+
 }
+
+#pastMedHistory {
+    background-color: transparent;
+    height: 30%;
+    width: 98%;
+
+    border-style: none;
+    outline: none;
+    /* Remove default focus outline */
+
+}
+
 
 .profile-pic {}
 
 .med-history {
     border: 4px solid #33ff33;
-    
+
     border-style: inset;
     margin: 10px;
     padding: 3px;
 }
 
 .mainbox {
-    width: 987px;
+    width: 77%;
     height: 490px;
-    
+
     font-family: 'Courier New', monospace;
-    font-size: 16px;
+    font-size: 17px;
     border: 4px solid #33ff33;
-    
+
     border-style: inset;
     margin: 10px;
     padding: 3px;
+
+    height: 600px;
+    align-items: center;
+    justify-content: center;
 }
 
- 
-.textbox textarea {
+.response-textbox {
+    width: 98%;
+    height: 70%;
     background-color: transparent;
     border: 4px solid #33ff33;
-  
+    color: white;
     border-style: inset;
     margin: 10px;
     padding: 3px;
 
 }
 
+.symptoms-textbox {
+    width: 98%;
+    height: 19%;
+    background-color: transparent;
+    border: 4px solid #33ff33;
+    color: white;
+    border-style: inset;
+    margin: 10px;
+    padding: 3px;
+
+}
+
+#sendButton {
+    color: black;
+    padding: 7px 15px;
+    border: 2px soli;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    background-color: #33ff33;
+    margin: 11px;
+}
+
+#sendButton:hover {
+    background-color: #000000;
+    color: #33ff33;
+    border: 2px solid #33ff33;
+}
 
 
+#answer {
+    background-color: transparent;
+    height: 94%;
+    width: 98%;
+    color: white;
+    border-style: none;
+    outline: none;
+    /* Remove default focus outline */
+}
 
-
+#symptoms {
+    background-color: transparent;
+    height: 80%;
+    width: 98%;
+    color: white;
+    border-style: none;
+    outline: none;
+    /* Remove default focus outline */
+}
 
 .slider {
     width: 300px;
@@ -125,4 +270,18 @@ body {
     height: 20px;
     background-color: #fff;
     cursor: pointer;
+}
+
+
+button {
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    background-color: #33ff33;
+    border: 2px solid black;
+}
+
+button:hover {
+    background-color: #000000;
+    color: #33ff33;
+    border: 2px solid #33ff33;
 }
