--- a/AI Doctor/app/templates/login.html
+++ b/AI Doctor/app/templates/login.html
@@ -39,7 +39,7 @@
             {% endwith %}
         </div>
         <div class="login-box">
-            <h2>Login to Your Account</h2>
+            <p style="font-size: 36px;text-align: center; margin: 20px;">Login to Your Account</p>
             <form method="POST">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required style="color:#33ff33">
