--- a/AI Doctor/app/templates/login.html
+++ b/AI Doctor/app/templates/login.html
@@ -41,9 +41,9 @@
         <div class="login-box">
             <p style="font-size: 36px;text-align: center; margin: 20px;">Login to Your Account</p>
             <form method="POST">
-                <label for="email">Email:</label>
+                <label for="email">&gt; Email:</label>
                 <input type="email" id="email" name="email" required style="color:#33ff33">
-                <label for="password">Password:</label>
+                <label for="password">&gt; Password:</label>
                 <input type="password" id="password" name="password" required style="color:#33ff33; ">
                 <button class="btn-primary">Login</button>
             </form>
