--- a/AI Doctor/app/templates/signup.html
+++ b/AI Doctor/app/templates/signup.html
@@ -44,16 +44,16 @@
             <div class="login-box" style="height: 600px; ">
                 <p style="font-size: 36px;text-align: center; margin: 20px;">Sign Up </p>
                   <form method="POST">  
-                    <label for="name">Name:</label>
+                    <label for="name">&gt; Name:</label>
                     <input type="text" id="name" name="name" required>
                 
-                    <label for="email">Email:</label>
+                    <label for="email">&gt; Email:</label>
                     <input type="email" id="inputEmail4" name="email" required>
                 
-                    <label for="inputPassword4" class="form-label">Password:</label>
+                    <label for="inputPassword4" class="form-label">&gt; Password:</label>
                     <input type="password" id="inputPassword4" name="password1" required>
 
-                    <label for="inputPassword4" class="form-label">Confirm Password:</label>
+                    <label for="inputPassword4" class="form-label">&gt; Confirm Password:</label>
                     <input type="password" id="inputPassword4" name="password2" required>
 
                     <button class="btn-primary">Sign Up</button>
