--- a/AI Doctor/app/static/login.css
+++ b/AI Doctor/app/static/login.css
@@ -31,7 +31,7 @@ body {
 }
 
 .login-box {
-	border: 2px solid #33ff33;
+	border: 2px dashed  #33ff33;
 	width: 30%;
 	height: 400px;
 	margin: auto;
@@ -66,7 +66,7 @@ input {
 	margin-bottom: 20px;
 	width: 100%;
 	box-sizing: border-box;
-	border: 2px solid #33ff33;
+	border: 2px dashed #33ff33;
 	background-color: black;
 	font-family: 'Courier New', Courier, monospace;
 	color:#33ff33;
@@ -78,17 +78,17 @@ button {
 	padding: 10px 30px;
 	cursor: pointer;
 	transition: all 0.3s ease-in-out;
-	background-color: #33ff33;
-	color: black;
-	border: 2px solid black;
+	background-color: black;
+	color: #33ff33;
+	border: dashed #33ff33;
 	margin-bottom: 20px;
-  font-family: 'Courier New', Courier, monospace;
+  	font-family: 'Courier New', Courier, monospace;
 }
 
 button:hover {
-	background-color: #000000;
-	color:#33ff33;
-	border: 2px solid #33ff33;
+	background-color: #33ff33;
+	color:black;
+	border: dashed black;
 }
 
 
