--- a/AI Doctor/app/templates/updatepw.html
+++ b/AI Doctor/app/templates/updatepw.html
@@ -39,15 +39,15 @@
                 <p style="font-size: 36px;text-align: center; margin: 20px;">Change your password</p>
                 <form method="POST">
                     <div class="input-container">
-                        <label for="email">Email:</label>
+                        <label for="email">&gt; Email:</label>
                         <input type="email" class="form-control" id="inputEmail4" name="email" required>
                     </div>
                     <div class="input-container">
-                        <label for="inputPassword4" class="form-label">Password:</label>
+                        <label for="inputPassword4" class="form-label">&gt; Password:</label>
                         <input type="password" class="form-control" id="inputPassword4" name="password1" required>
                     </div>
                     <div class="input-container">
-                        <label for="inputPassword4" class="form-label">Confirm Password:</label>
+                        <label for="inputPassword4" class="form-label">&gt; Confirm Password:</label>
                         <input type="password" class="form-control" id="inputPassword4" name="password2" required>
                     </div>
                     <button class="btn-primary">Update</button>
