--- a/AI Doctor/app/templates/index.html
+++ b/AI Doctor/app/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>AI Doctor</title>
+    <title>RoboClinician</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='/style.css') }}">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
@@ -75,7 +75,7 @@
         console.log(strings);
         var currentStringIndex = 0;
         var currentString = strings[currentStringIndex];
-        var speed = 50;
+        var speed = 5;
         var blinkInterval;
 
         function typeWriter() {
